@@ -111,25 +111,6 @@ extern int mips_step_skips_delay (CORE_ADDR);
 	 : builtin_type_int)
 #endif
 
-/* All mips targets store doubles in a register pair with the least
-   significant register in the lower numbered register.
-   If the target is big endian, double register values need conversion
-   between memory and register formats.  */
-
-extern void mips_register_convert_to_type (int regnum, 
-					   struct type *type,
-					   char *buffer);
-extern void mips_register_convert_from_type (int regnum, 
-					     struct type *type,
-					     char *buffer);
-
-#define REGISTER_CONVERT_TO_TYPE(n, type, buffer)	\
-  mips_register_convert_to_type ((n), (type), (buffer))
-
-#define REGISTER_CONVERT_FROM_TYPE(n, type, buffer)	\
-  mips_register_convert_from_type ((n), (type), (buffer))
-
-
 /* Special symbol found in blocks associated with routines.  We can hang
    mips_extra_func_info_t's off of this.  */
 
